# Module_9_QT

./: .gitignore  Создание репо.txt
Lesson_9_3/Les_9_3/: CMakeLists.txt  dialog_anwer.cpp  dialog_anwer.h  dialog_anwer.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
Lesson_9_4/DZ/DZ_9_4/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Lesson_9_4/Less/les_9_4/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Lesson_9_5/: литер.txt  пояснение дз.txt
Lesson_9_5/DZ/Les_9_5/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  stopwatch.cpp  stopwatch.h
Lesson_9_5/les/1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  signals.cpp  signals.h
Lesson_9_6/Les/: cmake.txt  много.txt
Lesson_9_6/Les/les/: CMakeLists.txt  examplerace.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Lesson_9_7/DZ/: cmake.txt  qmake.txt
Lesson_9_7/DZ/PreGraphic/: CMakeLists.txt  graphwindow.cpp  graphwindow.h  mainwindow.cpp  mainwindow.h
Lesson_9_8/: МЕТОДИЧКА_Qt_SQL.md
Lesson_9_8/08_PreDataBase/: CMakeLists.txt  database.cpp  database.h  dbdata.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Lesson_9_9/: мет.txt
Lesson_9_9/DZ/: mainwindow.cpp  mainwindow.h  udpworker.cpp
